--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,8 @@ data-encoding = "2.3.2"
 ring = "0.16.20"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
+tempfile = "3.2.0"
+fs_extra = "1.2.0"
 
 [features]
 default = [ "custom-protocol" ]
