--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,15 +12,15 @@ build = "src/build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-beta.4" }
+tauri-build = "1.0.0-beta.4"
 
 [dependencies]
-serde_json = "1.0"
+serde_json = "1.0.72"
 walkdir = "2.3.2"
 itertools = "0.10.1"
 data-encoding = "2.3.2"
 ring = "0.16.20"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0.130", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
 
 [dev-dependencies]
